inheritance and overriding methods and constructors

--- a/oops.ipynb
+++ b/oops.ipynb
@@ -188,11 +188,166 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Implementing the concepts of inheritance"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#creating the parent/base/super class that is to be inherited\n",
+    "class Vehicle:\n",
+    "    #constructor\n",
+    "    def __init__(self,mileage,cost):\n",
+    "        self.mileage= mileage\n",
+    "        self.cost = cost\n",
+    "    def vehicle_details(self):\n",
+    "        print(\"You are inside a vehicle\")\n",
+    "        print(\"Mileage of this vehicle is \",self.mileage,\"kmpl\")\n",
+    "        print(\"Cost of this vehicle is Rs. \",self.cost)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You are inside a vehicle\n",
+      "Mileage of this vehicle is  35 kmpl\n",
+      "Cost of this vehicle is Rs.  100000\n"
+     ]
+    }
+   ],
+   "source": [
+    "v1 = Vehicle(35,100000)\n",
+    "v1.vehicle_details()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You are inside a vehicle\n",
+      "Mileage of this vehicle is  80 kmpl\n",
+      "Cost of this vehicle is Rs.  1000000\n",
+      "\n",
+      "You are inside a car\n"
+     ]
+    }
+   ],
+   "source": [
+    "#creating a child/sub class that will inherit the baseclass\n",
+    "class Car(Vehicle): #the syntax is to pass the baseclass into the childclass as a class argument\n",
+    "    def show_car(self): #adding an extra method which is exclusive this class only and not in the baseclass\n",
+    "        print(\"You are inside a car\")\n",
+    "\n",
+    "c1=Car(80,1000000)\n",
+    "c1.vehicle_details()\n",
+    "print()\n",
+    "c1.show_car()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You are inside a car\n",
+      "Mileage of this vehicle is  70 kmpl\n",
+      "Cost of this vehicle is Rs.  800000\n",
+      "\n",
+      "You are inside a car\n"
+     ]
+    }
+   ],
+   "source": [
+    "#redefining any particular method from the baseclass in the child class is called method/function overriding#creating a child/sub class that will inherit the baseclass\n",
+    "class Car(Vehicle): #the syntax is to pass the baseclass into the childclass as a class argument\n",
+    "    def show_car(self): #adding an extra method which is exclusive this class only and not in the baseclass\n",
+    "        print(\"You are inside a car\")\n",
+    "    #overriding the vehicle_details method\n",
+    "    def vehicle_details(self):\n",
+    "        print(\"You are inside a car\")\n",
+    "        print(\"Mileage of this vehicle is \",self.mileage,\"kmpl\")\n",
+    "        print(\"Cost of this vehicle is Rs. \",self.cost)\n",
+    "\n",
+    "c2=Car(70,800000)\n",
+    "c2.vehicle_details()\n",
+    "print()\n",
+    "c2.show_car()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Overriding the constructor(init method) in the base class"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You are inside a car\n",
+      "Mileage of this vehicle is  70 kmpl\n",
+      "Cost of this vehicle is Rs.  800000\n",
+      "No. tyres of this vehicle is Rs.  4\n",
+      "Power of this vehicle is Rs.  300 hp\n",
+      "\n",
+      "You are inside a car\n",
+      "\n",
+      "4 300\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Car(Vehicle): #the syntax is to pass the baseclass into the childclass as a class argument\n",
+    "    def __init__(self,mileage,cost,tyres,hp):\n",
+    "        super().__init__(mileage,cost)   #invoking the super/parent class constructor using the super() method\n",
+    "        self.tyres= tyres\n",
+    "        self.hp = hp\n",
+    "    def show_car(self): \n",
+    "        print(\"You are inside a car\")\n",
+    "    #overriding the vehicle_details method\n",
+    "    def vehicle_details(self):\n",
+    "        print(\"You are inside a car\")\n",
+    "        print(\"Mileage of this vehicle is \",self.mileage,\"kmpl\")\n",
+    "        print(\"Cost of this vehicle is Rs. \",self.cost)\n",
+    "        print(\"No. tyres of this vehicle is Rs. \",self.tyres)\n",
+    "        print(\"Power of this vehicle is Rs. \",self.hp,\"hp\")\n",
+    "\n",
+    "c3=Car(70,800000,4,300)\n",
+    "c3.vehicle_details()\n",
+    "print()\n",
+    "c3.show_car()\n",
+    "print()\n",
+    "print(c3.tyres, c3.hp)"
+   ]
   }
  ],
  "metadata": {
