class methods vs static methods (@classmethod vs @staticmethod)

--- a/oops.ipynb
+++ b/oops.ipynb
@@ -169,6 +169,66 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Classmethod V/s Staticmethod\n",
+    "\n",
+    "Class methods are the methods of the class that are bound to the class rather than the object or any particular instance of the class.\n",
+    "Classmethods are determined by the @classmethod annotation on top of the method definition. Just like how other normal methods in a class takes __self__ parameter in the function, it takes __cls__ parameter.\n",
+    "\n",
+    "Static methods are methods that belong to the class, but they don't have access to the class or instance attributes. Static methods are methods that belong to the class, but they don't have access to the class or instance attributes. They don't take any special parameter in the function definition like __self__ or __cls__. They can be called from both the class or the instance of the class. But the most notable advantage like in java also it doesn't require a instance of the class to be created to call the methods."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "21\n",
+      "27\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Python program to demonstrate\n",
+    "# use of class method and static method.\n",
+    "from datetime import date\n",
+    "\n",
+    "\n",
+    "class Person:\n",
+    "\tdef __init__(self, name, age):\n",
+    "\t\tself.name = name\n",
+    "\t\tself.age = age\n",
+    "\n",
+    "\t# a class method to create a Person object by birth year.\n",
+    "\t@classmethod\n",
+    "\tdef fromBirthYear(cls, name, year):\n",
+    "\t\treturn cls(name, date.today().year - year)\n",
+    "\n",
+    "\t# a static method to check if a Person is adult or not.\n",
+    "\t@staticmethod\n",
+    "\tdef isAdult(age):\n",
+    "\t\treturn age > 18\n",
+    "\n",
+    "\n",
+    "person1 = Person('mayank', 21)\n",
+    "person2 = Person.fromBirthYear('mayank', 1996)\n",
+    "\n",
+    "print(person1.age)\n",
+    "print(person2.age)\n",
+    "\n",
+    "# print the result\n",
+    "print(Person.isAdult(22))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 31,
    "metadata": {},
@@ -347,6 +407,14 @@
     "c3.show_car()\n",
     "print()\n",
     "print(c3.tyres, c3.hp)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There are different types of inheritance in programming and one of them is multiple inheritance. In multiple inheritance the child class inherits from more than one class."
    ]
   }
  ],
