--- a/oops.ipynb
+++ b/oops.ipynb
@@ -416,6 +416,75 @@
    "source": [
     "There are different types of inheritance in programming and one of them is multiple inheritance. In multiple inheritance the child class inherits from more than one class."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mammals can give direct birth.\n",
+      "Winged animals can flap.\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Mammal: #Baseclass1\n",
+    "    def mammal_info(self):\n",
+    "        print(\"Mammals can give direct birth.\")\n",
+    "\n",
+    "class WingedAnimal: #Baseclass2\n",
+    "    def winged_animal_info(self):\n",
+    "        print(\"Winged animals can flap.\")\n",
+    "\n",
+    "class Bat(Mammal, WingedAnimal):\n",
+    "    pass    #pass keyword is used to create an empty method or class\n",
+    "\n",
+    "# create an object of Bat class\n",
+    "b1 = Bat()\n",
+    "\n",
+    "b1.mammal_info()\n",
+    "b1.winged_animal_info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bats are mammals and winged animal at the same time\n",
+      "Mammals can give direct birth.\n",
+      "Winged animals can flap.\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Mammal: #Baseclass1\n",
+    "    def mammal_info(self):\n",
+    "        print(\"Mammals can give direct birth.\")\n",
+    "\n",
+    "class WingedAnimal: #Baseclass2\n",
+    "    def winged_animal_info(self):\n",
+    "        print(\"Winged animals can flap.\")\n",
+    "\n",
+    "class Bat(Mammal, WingedAnimal):\n",
+    "    @staticmethod\n",
+    "    def info():\n",
+    "        print(\"Bats are mammals and winged animal at the same time\")\n",
+    "\n",
+    "# create an object of Bat class\n",
+    "b2 = Bat()\n",
+    "Bat.info()\n",
+    "b2.mammal_info()\n",
+    "b2.winged_animal_info()"
+   ]
   }
  ],
  "metadata": {
