--- a/oops.ipynb
+++ b/oops.ipynb
@@ -485,6 +485,58 @@
     "b2.mammal_info()\n",
     "b2.winged_animal_info()"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Multilevel Inheritance\n",
+    "\n",
+    "n Python, not only can we derive a class from the superclass but you can also derive a class from the derived class. This form of inheritance is known as multilevel inheritance."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Super Class method called\n",
+      "Derived class 1 method called\n",
+      "Derived class 2 method called\n"
+     ]
+    }
+   ],
+   "source": [
+    "class SuperClass:\n",
+    "\n",
+    "    def super_method(self):\n",
+    "        print(\"Super Class method called\")\n",
+    "\n",
+    "# define class that derive from SuperClass\n",
+    "class DerivedClass1(SuperClass):\n",
+    "    def derived1_method(self):\n",
+    "        print(\"Derived class 1 method called\")\n",
+    "\n",
+    "# define class that derive from DerivedClass1\n",
+    "class DerivedClass2(DerivedClass1):\n",
+    "\n",
+    "    def derived2_method(self):\n",
+    "        print(\"Derived class 2 method called\")\n",
+    "\n",
+    "# create an object of DerivedClass2\n",
+    "d2 = DerivedClass2()\n",
+    "\n",
+    "d2.super_method()  # Output: \"Super Class method called\"\n",
+    "\n",
+    "d2.derived1_method()  # Output: \"Derived class 1 method called\"\n",
+    "\n",
+    "d2.derived2_method()  # Output: \"Derived class 2 method called\""
+   ]
   }
  ],
  "metadata": {
