getter and setter using @property decorator

--- a/oops.ipynb
+++ b/oops.ipynb
@@ -537,6 +537,128 @@
     "\n",
     "d2.derived2_method()  # Output: \"Derived class 2 method called\""
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Method Resolution Order (MRO) in Python\n",
+    "\n",
+    "If two superclasses have the same method name and the derived class calls that method, Python uses the MRO to search for the right method to call."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Super Class 1 method called\n"
+     ]
+    }
+   ],
+   "source": [
+    "class SuperClass1:\n",
+    "    def info(self):\n",
+    "        print(\"Super Class 1 method called\")\n",
+    "\n",
+    "class SuperClass2:\n",
+    "    def info(self):\n",
+    "        print(\"Super Class 2 method called\")\n",
+    "\n",
+    "class Derived(SuperClass1, SuperClass2):\n",
+    "    pass\n",
+    "\n",
+    "d1 = Derived()\n",
+    "d1.info()  "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here, SuperClass1 and SuperClass2 both of these classes define a method info().\n",
+    "\n",
+    "So when info() is called using the d1 object of the Derived class, Python uses the MRO to determine which method to call.\n",
+    "\n",
+    "In this case, the MRO specifies that methods should be inherited from the leftmost superclass first, so info() of SuperClass1 is called rather than that of SuperClass2"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Getter and Setters using the @property decorator to access the private class attributes and methods."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Setting value...\n",
+      "Getting value...\n",
+      "37\n",
+      "Getting value...\n",
+      "98.60000000000001\n",
+      "Setting value...\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "Temperature below -273 is not possible",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[50], line 29\u001b[0m\n\u001b[0;32m     25\u001b[0m \u001b[39mprint\u001b[39m(human\u001b[39m.\u001b[39mtemperature)\n\u001b[0;32m     27\u001b[0m \u001b[39mprint\u001b[39m(human\u001b[39m.\u001b[39mto_fahrenheit())\n\u001b[1;32m---> 29\u001b[0m coldest_thing \u001b[39m=\u001b[39m Celsius(\u001b[39m-\u001b[39;49m\u001b[39m300\u001b[39;49m)\n",
+      "Cell \u001b[1;32mIn[50], line 4\u001b[0m, in \u001b[0;36mCelsius.__init__\u001b[1;34m(self, temperature)\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m__init__\u001b[39m(\u001b[39mself\u001b[39m, temperature\u001b[39m=\u001b[39m\u001b[39m0\u001b[39m):\n\u001b[1;32m----> 4\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mtemperature \u001b[39m=\u001b[39m temperature\n",
+      "Cell \u001b[1;32mIn[50], line 18\u001b[0m, in \u001b[0;36mCelsius.temperature\u001b[1;34m(self, value)\u001b[0m\n\u001b[0;32m     16\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mSetting value...\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m     17\u001b[0m \u001b[39mif\u001b[39;00m value \u001b[39m<\u001b[39m \u001b[39m-\u001b[39m\u001b[39m273.15\u001b[39m:\n\u001b[1;32m---> 18\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mTemperature below -273 is not possible\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m     19\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_temperature \u001b[39m=\u001b[39m value\n",
+      "\u001b[1;31mValueError\u001b[0m: Temperature below -273 is not possible"
+     ]
+    }
+   ],
+   "source": [
+    "# Using @property decorator\n",
+    "class Celsius:\n",
+    "    def __init__(self, temperature=0):\n",
+    "        self.temperature = temperature\n",
+    "\n",
+    "    def to_fahrenheit(self):\n",
+    "        return (self.temperature * 1.8) + 32\n",
+    "\n",
+    "    @property\n",
+    "    def temperature(self):\n",
+    "        print(\"Getting value...\")\n",
+    "        return self._temperature\n",
+    "\n",
+    "    @temperature.setter\n",
+    "    def temperature(self, value):\n",
+    "        print(\"Setting value...\")\n",
+    "        if value < -273.15:\n",
+    "            raise ValueError(\"Temperature below -273 is not possible\")\n",
+    "        self._temperature = value\n",
+    "\n",
+    "\n",
+    "# create an object\n",
+    "human = Celsius(37)\n",
+    "\n",
+    "print(human.temperature)\n",
+    "\n",
+    "print(human.to_fahrenheit())\n",
+    "\n",
+    "coldest_thing = Celsius(-300)"
+   ]
   }
  ],
  "metadata": {
